Implement contributor attribution consistency
Co-authored-by: ambicuity <44251619+ambicuity@users.noreply.github.com>

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -36,6 +36,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Configure git author
+      run: |
+        git config user.name "ambicuity Ritesh Rana"  
+        git config user.email "riteshrana36@gmail.com"
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -120,6 +125,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+
+    - name: Configure git author
+      run: |
+        git config user.name "ambicuity Ritesh Rana"  
+        git config user.email "riteshrana36@gmail.com"
 
     - name: Set up Go
       uses: actions/setup-go@v5
