--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Configure git author
+      run: |
+        git config user.name "ambicuity Ritesh Rana"  
+        git config user.email "riteshrana36@gmail.com"
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
